--- a/spring-cloud/stream-rabbit/example-stream-rabbit/src/main/resources/application.properties
+++ b/spring-cloud/stream-rabbit/example-stream-rabbit/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=example-stream-rabbit
 server.port=6566
 
-spring.rabbitmq.host=106.14.172.217
+spring.rabbitmq.host=
+# 远程端口是这个
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=admin
-spring.rabbitmq.password=admin123456
+spring.rabbitmq.username=
+spring.rabbitmq.password=
 
