--- a/spring-cloud/hystrix-turbine-rabbit/app-consumer-service/src/main/resources/application.properties
+++ b/spring-cloud/hystrix-turbine-rabbit/app-consumer-service/src/main/resources/application.properties
@@ -10,8 +10,12 @@ eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 # 开放监控接口
 management.endpoints.web.exposure.include=hystrix.stream,health,info
 
-spring.rabbitmq.host=
+# rabbitmq 配置
+spring.rabbitmq.host=127.0.0.1
 spring.rabbitmq.port=5672
-spring.rabbitmq.virtual-host=hystrix-turbine
-spring.rabbitmq.username=admin
-spring.rabbitmq.password=admin123456
+spring.rabbitmq.virtual-host=test
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+spring.cloud.stream.rabbit.bindings.test.consumer.prefix=z
+spring.cloud.stream.bindings.input.group=default
