--- a/spring-cloud/hystrix-turbine-rabbit/cloud-hystrix-turbine-service/src/main/resources/application.properties
+++ b/spring-cloud/hystrix-turbine-rabbit/cloud-hystrix-turbine-service/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.application.name=cloud-hystrix-turbine-service
-server.port=7700
+server.port=7200
 
 # 开放接口
 management.endpoints.web.exposure.include=*
 management.endpoints.web.cors.allowed-origins=*
 management.endpoints.web.cors.allowed-headers=*
-#management.server.port=7800
+#management.server.port=8990
+
 
 # 监控服务名称
 turbine.app-config=app-producer-service,app-consumer-service,app-hystrixCommand-service
@@ -15,8 +16,14 @@ turbine.combine-host-port=true
 
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 
-spring.rabbitmq.host=
+# rabbitmq 配置
+spring.rabbitmq.host=127.0.0.1
 spring.rabbitmq.port=5672
-spring.rabbitmq.virtual-host=hystrix-turbine
-spring.rabbitmq.username=admin
-spring.rabbitmq.password=admin123456
+spring.rabbitmq.virtual-host=test
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+spring.cloud.stream.rabbit.bindings.test.consumer.prefix=z
+spring.cloud.stream.bindings.input.group=default
+
+spring.main.allow-bean-definition-overriding=true
