--- a/spring-cloud/hystrix-turbine/app-hystrixCommand-service/src/main/resources/application.properties
+++ b/spring-cloud/hystrix-turbine/app-hystrixCommand-service/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=app-hystrixCommand-service
 server.port=8300
 
+# 开启断路
+feign.hystrix.enabled=true
+
 # 治理中心地址
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 
