--- a/spring-cloud/hystrix-turbine-rabbit/app-hystrixCommand-service/src/main/resources/application.properties
+++ b/spring-cloud/hystrix-turbine-rabbit/app-hystrixCommand-service/src/main/resources/application.properties
@@ -17,5 +17,4 @@ spring.rabbitmq.virtual-host=test
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-spring.cloud.stream.rabbit.bindings.test.consumer.prefix=z
-spring.cloud.stream.bindings.input.group=default
+spring.cloud.stream.rabbit.bindings.test.producer.bind-queue=true
