--- a/spring-cloud/hystrix-turbine-rabbit/cloud-hystrix-turbine-service/src/main/resources/application.properties
+++ b/spring-cloud/hystrix-turbine-rabbit/cloud-hystrix-turbine-service/src/main/resources/application.properties
@@ -13,6 +13,8 @@ turbine.app-config=app-producer-service,app-consumer-service,app-hystrixCommand-
 # 默认集群名称
 turbine.cluster-name-expression=new String("default")
 turbine.combine-host-port=true
+#turbine.stream.port=18888
+
 
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 
@@ -23,7 +25,7 @@ spring.rabbitmq.virtual-host=test
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-spring.cloud.stream.rabbit.bindings.test.consumer.prefix=z
-spring.cloud.stream.bindings.input.group=default
 
-spring.main.allow-bean-definition-overriding=true
+spring.cloud.stream.rabbit.bindings.test.consumer.bind-queue=true
+
+#spring.main.allow-bean-definition-overriding=true
