--- a/spring-cloud/config-git-rabbit/cloud-config-service/src/main/resources/application.properties
+++ b/spring-cloud/config-git-rabbit/cloud-config-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=cloud-config-service
 server.port=7100
 
 # Git 仓库地址
-spring.cloud.config.server.git.uri=http://gitlab.la-inc.cn/xupeng/xp-spring-cloud-learning-config.git
+spring.cloud.config.server.git.uri=git@github.com:kaoshanji/learning/spring-cloud/config-repo
 # 仓库路径下的相对搜索位置，可以有多个，根据应用服务名称映射
 spring.cloud.config.server.git.search-paths={application}
 
