--- a/spring-cloud/config-git-rabbit/cloud-config-service/src/main/resources/application.properties
+++ b/spring-cloud/config-git-rabbit/cloud-config-service/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=cloud-config-service
 server.port=7100
 
 # Git 仓库地址
-spring.cloud.config.server.git.uri=git@github.com:kaoshanji/learning/spring-cloud/config-repo
+spring.cloud.config.server.git.uri=https://github.com/kaoshanji/learning
 # 仓库路径下的相对搜索位置，可以有多个，根据应用服务名称映射
-spring.cloud.config.server.git.search-paths={application}
+spring.cloud.config.server.git.search-paths=spring-cloud-config-repo/{application}
 
 # Git 用户名 不是公开的需要填写
 #spring.cloud.config.server.git.username=
