--- a/spring-cloud/config-git-rabbit/example-config-client/src/main/resources/bootstrap.properties
+++ b/spring-cloud/config-git-rabbit/example-config-client/src/main/resources/bootstrap.properties
@@ -9,4 +9,9 @@ spring.cloud.config.label=master
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.service-id=cloud-config-service
 
+spring.cloud.bus.trace.enabled=true
+spring.cloud.bus.enabled=true
+
+
+
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
