--- a/spring-cloud/config-git-rabbit/cloud-config-service/pom.xml
+++ b/spring-cloud/config-git-rabbit/cloud-config-service/pom.xml
@@ -27,6 +27,15 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-bus</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-stream-binder-rabbit</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
