--- a/spring-cloud/config-git-rabbit/cloud-config-service/src/main/resources/application.properties
+++ b/spring-cloud/config-git-rabbit/cloud-config-service/src/main/resources/application.properties
@@ -12,4 +12,9 @@ spring.cloud.config.server.git.search-paths=spring-cloud/config-repo/{applicatio
 # Git 密码
 #spring.cloud.config.server.git.password=
 
+spring.cloud.bus.enabled=true
+spring.cloud.bus.trace.enabled=true
+
+management.endpoints.web.exposure.include=bus-refresh
+
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
