zipkin-MySQL-RabbitMQ

--- a/spring-cloud/hystrix-turbine-rabbit/cloud-hystrix-dashboard/src/main/resources/application.properties
+++ b/spring-cloud/hystrix-turbine-rabbit/cloud-hystrix-dashboard/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=cloud-hystrix-dashboard
 server.port=7100
 
 # 治理中心地址
-eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
+#eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
