--- a/spring-cloud/hystrix-turbine-rabbit/cloud-hystrix-turbine-service/src/main/resources/application.properties
+++ b/spring-cloud/hystrix-turbine-rabbit/cloud-hystrix-turbine-service/src/main/resources/application.properties
@@ -9,23 +9,22 @@ management.endpoints.web.cors.allowed-headers=*
 
 
 # 监控服务名称
-turbine.app-config=app-producer-service,app-consumer-service,app-hystrixCommand-service
+#turbine.app-config=app-producer-service,app-consumer-service,app-hystrixCommand-service
 # 默认集群名称
-turbine.cluster-name-expression=new String("default")
-turbine.combine-host-port=true
+#turbine.cluster-name-expression=new String("default")
+#turbine.combine-host-port=true
 #turbine.stream.port=18888
-
 
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 
 # rabbitmq 配置
-spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
-spring.rabbitmq.virtual-host=test
+#spring.rabbitmq.virtual-host=test
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 
-spring.cloud.stream.rabbit.bindings.test.consumer.bind-queue=true
+#spring.cloud.stream.rabbit.bindings.test.consumer.bind-queue=true
 
 #spring.main.allow-bean-definition-overriding=true
