--- a/spring-cloud/hystrix-turbine-rabbit/app-consumer-service/src/main/resources/application.properties
+++ b/spring-cloud/hystrix-turbine-rabbit/app-consumer-service/src/main/resources/application.properties
@@ -8,13 +8,13 @@ feign.hystrix.enabled=true
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 
 # 开放监控接口
-management.endpoints.web.exposure.include=hystrix.stream,health,info
+#management.endpoints.web.exposure.include=hystrix.stream,health,info
 
 # rabbitmq 配置
-spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
-spring.rabbitmq.virtual-host=test
+#spring.rabbitmq.virtual-host=test
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-spring.cloud.stream.rabbit.bindings.test.producer.bind-queue=true
+#spring.cloud.stream.rabbit.bindings.test.producer.bind-queue=true
