--- a/spring-cloud/hystrix-turbine-rabbit/cloud-hystrix-dashboard/pom.xml
+++ b/spring-cloud/hystrix-turbine-rabbit/cloud-hystrix-dashboard/pom.xml
@@ -24,15 +24,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-hystrix-dashboard</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
+        </dependency>-->
+
     </dependencies>
 
     <build>
