--- a/spring-cloud/sleuth-zipkin-mysql/app-consumer-service/pom.xml
+++ b/spring-cloud/sleuth-zipkin-mysql/app-consumer-service/pom.xml
@@ -3,18 +3,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>xp-spring-cloud-learning-hystrix-turbine-rabbit</artifactId>
+        <artifactId>xp-spring-cloud-learning-sleuth-zipkin-mysql</artifactId>
         <groupId>top.kaoshanji</groupId>
         <version>1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>app-hystrixCommand-service</artifactId>
+    <artifactId>app-consumer-service</artifactId>
+    <version>1</version>
     <packaging>jar</packaging>
 
-    <name>app-hystrixCommand-service</name>
-    <description>方法级别断路</description>
-
+    <name>app-consumer-service</name>
 
     <dependencies>
 
@@ -25,26 +24,12 @@
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-netflix-hystrix-stream</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
         <dependency>
@@ -52,10 +37,25 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-stream-binder-rabbit</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
-        <finalName>app-hystrixCommand-service-1</finalName>
+        <finalName>app-consumer-service-1</finalName>
     </build>
 
 </project>
