--- a/spring-cloud/stream-rabbit/example-stream-rabbit/src/main/resources/application.properties
+++ b/spring-cloud/stream-rabbit/example-stream-rabbit/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=example-stream-rabbit
 server.port=6566
 
-spring.rabbitmq.host=
-# 远程端口是这个
+# rabbitmq 配置
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=
-spring.rabbitmq.password=
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
+# 与 StreamTopic 保持一致
+spring.cloud.stream.bindings.stream-topic-input.destination=stream-topic
+spring.cloud.stream.bindings.stream-topic-output.destination=stream-topic
