--- a/JavaLearingCode/pom.xml
+++ b/JavaLearingCode/pom.xml
@@ -4,12 +4,21 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>top.kaoshanji</groupId>
+  <groupId>top.kaoshanji.JavaLearingCode</groupId>
   <artifactId>JavaLearingCode</artifactId>
   <version>1</version>
+  <packaging>pom</packaging>
 
   <name>JavaLearingCode</name>
+
   <description>Java代码写一写</description>
+
+  <modules>
+    <module>common</module>
+    <module>mybatisx</module>
+    <module>scenes</module>
+    <module>springframeworkx</module>
+  </modules>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -30,6 +39,7 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+
 
     <!-- log -->
     <dependency>
@@ -52,56 +62,11 @@
       <scope>runtime</scope>
     </dependency>
 
-    <!-- httpcomponents -->
-    <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient</artifactId>
-      <version>${httpclient.version}</version>
-    </dependency>
 
-    <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpmime</artifactId>
-      <version>${httpclient.version}</version>
-    </dependency>
-
-    <!-- commons -->
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.8.0</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
-      <version>3.4</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-collections4</artifactId>
-      <version>4.1</version>
-    </dependency>
-
-    <!-- mysql -->
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.31</version>
-    </dependency>
-
-    <!-- mybatis -->
-    <dependency>
-      <groupId>org.mybatis</groupId>
-      <artifactId>mybatis</artifactId>
-      <version>3.5.1</version>
-    </dependency>
 
   </dependencies>
 
-  <build>
 
-  </build>
+
 
 </project>
