--- a/JavaLearingCode/pom.xml
+++ b/JavaLearingCode/pom.xml
@@ -18,13 +18,14 @@
     <module>mybatisx</module>
     <module>scenes</module>
     <module>springframeworkx</module>
+    <module>jdkx</module>
   </modules>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
     <slf4j.version>1.7.25</slf4j.version>
     <logback.version>1.2.3</logback.version>
     <httpclient.version>4.5.3</httpclient.version>
