--- a/JavaLearingCode/mybatisx/pom.xml
+++ b/JavaLearingCode/mybatisx/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>mybatis</artifactId>
+    <artifactId>mybatisx</artifactId>
     <packaging>jar</packaging>
 
     <name>mybatis</name>
