--- a/JavaLearingCode/scenes/pom.xml
+++ b/JavaLearingCode/scenes/pom.xml
@@ -1,33 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>JavaLearingCode</artifactId>
-        <groupId>top.kaoshanji.JavaLearingCode</groupId>
-        <version>1</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<parent>
+		<artifactId>JavaLearingCode</artifactId>
+		<groupId>top.kaoshanji.JavaLearingCode</groupId>
+		<version>1</version>
+	</parent>
+	<modelVersion>4.0.0</modelVersion>
 
-    <artifactId>scenes</artifactId>
-    <packaging>jar</packaging>
+	<artifactId>scenes</artifactId>
+	<packaging>jar</packaging>
 
-    <name>scenes</name>
+	<name>scenes</name>
 
 
-    <dependencies>
+	<dependencies>
 
-        <dependency>
-            <groupId>top.kaoshanji.JavaLearingCode</groupId>
-            <artifactId>common</artifactId>
-            <version>1</version>
-            <scope>compile</scope>
-        </dependency>
+		<dependency>
+			<groupId>top.kaoshanji.JavaLearingCode</groupId>
+			<artifactId>common</artifactId>
+			<version>1</version>
+			<scope>compile</scope>
+		</dependency>
 
-    </dependencies>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
 
-    <build>
-        <finalName>JavaLearingCodeScenes-1</finalName>
-    </build>
+	</dependencies>
+
+	<build>
+		<finalName>JavaLearingCodeScenes-1</finalName>
+	</build>
 
 </project>
