--- a/JavaLearingCode/scenes/pom.xml
+++ b/JavaLearingCode/scenes/pom.xml
@@ -31,6 +31,12 @@
 			<version>1.4.7</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.4.4</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
